# ton-client-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md  build.rs
.github/workflows/: release-post-actions.yml
src/: client.rs  contracts.rs  crypto.rs  error.rs  interop.rs  json_helper.rs  lib.rs  queries.rs  types.rs
src/tests/: mod.rs  test_crypto.rs  test_errors.rs  test_hello.rs  test_local_run.rs  test_piggy.rs  test_run_get.rs
