[package]
name = "ton-client-rs"
version = "0.23.0"
description = "TON SDK Client Library for Rust"
authors = ["TON DEV SOLUTIONS LTD <support@tonlabs.io>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://ton.dev"
repository = "https://github.com/tonlabs/ton-client-rs"
documentation = "https://docs.ton.dev"
keywords = ["TON", "blockchain", "cryptography", "network"]

[dependencies]
hex = "0.3.2"
serde_json = "1.0.53"
serde_derive = "1.0.110"
serde = "1.0.110"
base64 = "0.10.0"
futures = "0.1.26"
crc16 = "0.4.0"
error-chain = { version = "^0.12", default-features = false }

#TODO: remove feature disabling after ton-labs-executor repo is used in SDK
ton_client = { git = "https://github.com/tonlabs/TON-SDK.git", default_features = false, features = ["node_interaction"] }

[dev-dependencies]
lazy_static = "1.4.0"
dirs = "2.0.2"
